Final Commit for PS11

--- a/about.Rmd
+++ b/about.Rmd
@@ -14,8 +14,8 @@ More about this website.
 
 # Section name
 
-Hello world!
+Hello world!!
 
 ## Subsection name
 
-Hello world again!
+Hello world again!!
